--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
-    border:0;
+    border: 0;
     color: #FFF;
     font-size: 20px;
     font-weight: 700;
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -45,4 +46,21 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+/* header style */
+
+.header {
+    background: #FFF8F3;
+}
+
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+}
+
+.banner .profile-pic {
+    width: 500px;
+    /* height: 676px; */
+    /* flex-shrink: 0; */
 }
