--- a/style.css
+++ b/style.css
@@ -51,16 +51,29 @@ nav a {
 /* header style */
 
 .header {
-    background: #FFF8F3;
+    background-color: #FFF8F3;
+    background-image: url('../dev-portfolio/images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
+    align-items: center;
 }
 
 .banner .profile-pic {
     width: 500px;
     /* height: 676px; */
     /* flex-shrink: 0; */
+}
+
+.banner-greting {
+    font-size: 45px;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700px;
 }
