--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 .primary-text {
     color: #FD6E0A;
+
 }
 
 .btn-primary {
@@ -15,6 +16,17 @@ body {
     font-size: 20px;
     font-weight: 700;
     padding: 18px 35px;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
 
 /* nav related style    */
@@ -76,4 +88,13 @@ nav a {
 .banner-title {
     font-size: 85px;
     font-weight: 700px;
+}
+/* main section styles */
+
+/* about section style */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background:#FFF8F3;
+    margin: 130px 0;
 }
