added about info

--- a/style.css
+++ b/style.css
@@ -77,8 +77,6 @@ nav a {
 
 .banner .profile-pic {
     width: 500px;
-    /* height: 676px; */
-    /* flex-shrink: 0; */
 }
 
 .banner-greting {
@@ -90,11 +88,23 @@ nav a {
     font-weight: 700px;
 }
 /* main section styles */
-
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* about section style */
 .about{
     padding: 130px;
     border-radius: 10px;
     background:#FFF8F3;
     margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+
+}
+.about-infor{
+    text-align: center;
+    
 }
