--- a/style.css
+++ b/style.css
@@ -17,13 +17,15 @@ body {
     font-weight: 700;
     padding: 18px 35px;
 }
-.section-title{
+
+.section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
 }
-.section-description{
+
+.section-description {
     color: #757575;
     text-align: center;
     font-size: 18px;
@@ -87,24 +89,35 @@ nav a {
     font-size: 85px;
     font-weight: 700px;
 }
+
 /* main section styles */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
 /* about section style */
-.about{
+.about {
     padding: 130px;
     border-radius: 10px;
-    background:#FFF8F3;
+    background: #FFF8F3;
     margin: 130px 0;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 
 }
-.about-infor{
+
+.about-infor {
     text-align: center;
-    
+
+}
+
+#what-i-do-description {
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
 }
