--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about section style */
 .about {
@@ -115,9 +118,32 @@ main {
 
 }
 
+/* what i do style */
+
 #what-i-do-description {
     padding: 30px 150px;
 }
-.skills-container{
+
+.skills-container {
     display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px ;
+    background: #FFF;
+    box-shadow: rgba(0,0,0,0.06);
+    
+}
+
+.skill-description {
+    color: #757575;
+}
+/* resume section style */
+
+.resume-column-title{
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
 }
