--- a/style.css
+++ b/style.css
@@ -170,3 +170,11 @@ main section {
 .download-cv {
     text-align: center;
 }
+/* footer style */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+
+}
