--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@ nav a {
 
 .header {
     background-color: #FFF8F3;
-    background-image: url('../dev-portfolio/images/header_bg.png');
+    background-image: url('../dev-portfolio/images/header_bg.png'), url('../dev-portfolio/images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 
 .banner {
